src/hanusovedni/static/sass/_festival.scss
.template-festival {
  section > h2 {
    margin-bottom: 2rem;
    margin-top: 3rem;
    font-size: 1.2rem;
    font-family: $font-special;
    text-transform: uppercase;
    text-align: center;
    color: $c-light-grey;
  }

  .hero-text {
    background: $c-bg;
    font-family: $font-special;
    font-size: 1.5rem;
    line-height: 1.3;

    a {
      color: $c-blue;
      font-size: 0.9rem;
      text-transform: uppercase;
      text-decoration: none;

      &:hover, :focus {
        color: darken($c-blue, 10)
      }

      &::before {
        content: '\0041';
        display: inline-block;
        font-family: 'icons';
        font-style: normal;
        font-weight: normal;
        font-size: 1.5rem;
        -webkit-font-smoothing: antialiased;
        -moz-osx-font-smoothing: grayscale;

        float: left;
        margin-right: 10px;
      }
    }
  }

  .hero-carousel {
    // Pattern visible before images from carousel are loaded
    // https://codepen.io/edmundojr/pen/xOYJGw
    // Colors
    $bg-color: $c-bg;
    $dot-color: lighten($c-bg, 10);

    // Dimensions
    $dot-size: 2px;
    $dot-space: 22px;

    background: linear-gradient(90deg, $bg-color ($dot-space - $dot-size), transparent 1%) center,
    linear-gradient($bg-color ($dot-space - $dot-size), transparent 1%) center,
    $dot-color;
    background-size: $dot-space $dot-space;


    img {
      width: 100%;
      height: 100%;
      object-fit: cover;
    }

    .carousel-control-prev, .carousel-control-next {
      visibility: hidden;
    }

    &:hover {
      .carousel-control-prev, .carousel-control-next {
        visibility: visible;
      }
    }
  }

  section.call-to-action {
    margin-left: -1px;
    margin-right: -1px;
    font-family: $font-special;

    > .small-gutter {
      padding-right: 1px;
      padding-left: 1px;
      padding-bottom: 2px;
    }

    .btn-full {
      width: 100%;
      height: 11rem;

      a {
        &:hover, &:focus {
          text-decoration: none;
        }

        &.red {
          background: $c-red-light;

          &:hover, :focus {
            background: darken($c-red-light, 5)
          }
        }

        &.blue {
          background: $c-blue-light;

          &:hover, :focus {
            background: darken($c-blue-light, 5)
          }
        }

        &.orange {
          background: lighten($c-orange-light, 5);

          &:hover, :focus {
            background: $c-orange-light
          }
        }

        i {
          color: $c-special;
        }
      }
    }

    a {
      width: 100%;
      height: 100%;
      color: white;

      &.big {
        font-size: 2rem;
      }
    }

    .about-slh {
      line-height: 1.1;

      .text {
        padding-left: 40px;
      }

      .logo {
        height: 110px;
      }

      .more {
        font-size: 0.8rem;
        text-transform: uppercase;

        i {
          color: white;
          font-size: 2rem;
        }
      }
    }
  }

  section.video-invites {
    .video-text {
      height: 100%;
      background-color: $c-bg;
      font-family: $font-special;
      line-height: 1.5;

      p:last-child {
        margin-bottom: 0;
      }

      a {
        color: $c-red-light;
      }
    }

    .video-invites-carousel {
      .carousel-control-prev, .carousel-control-next {
        visibility: hidden;
        height: 30px;
        top: 50%;
        bottom: 50%;
      }

      &:hover {
        .carousel-control-prev, .carousel-control-next {
          visibility: visible;
        }
      }
    }
  }

  section#headline {
    .headliner {
      height: 360px;

      &:hover, &:active {
        .name, .description {
          transition: all 0.3s;
          transform: translateY(-277px);
          opacity: 0.9;
        }

      }

      .name, .description {
        background: $c-bg;
        transform: translateY(-77px);
      }

      .description > div {
        height: 190px;
      }

      .name {
        i {
          color: $c-red-light;
          font-size: 1.8rem;
          margin-top: -3px;
        }

      }

      h4 {
        margin: 0;
        font-weight: bold;
      }

      a {
        color: white;
        &:hover, &:active {
          text-decoration: none;
        }
      }

      img {
        object-fit: cover;
        width: 100%;
        height: 100%;
      }
    }
  }

  section.partners {
    img {
      filter: grayscale(1);
      max-width: 100%;
    }

    a {
      &:hover, &:focus {
        opacity: 0.85
      }
    }

    h2 {
      margin-bottom: 2rem;
      margin-top: 3rem;
      font-size: 1.2rem;
      font-family: $font-special;
      text-transform: uppercase;
      text-align: center;
      color: $c-light-grey;
    }
  }

  section.social-media {
    a {
      background: $c-blue-light;
      color: white;
      font-family: $font-special;
      font-size: 2rem;
      font-weight: bold;
      line-height: 1;
      padding: 40px 0;

      &:hover, :focus {
        background: darken($c-blue-light, 5)
      }

      i {
        height: 1.7rem;
        color: $c-special;
      }
    }
  }
}

